# gg

./: .gitignore  Makefile.am  README.md  configure.ac
examples/fibonacci/: Makefile.am  fib.cc
examples/gtest/: Makefile.am  wrapper.cc
examples/viddec/: Makefile.am  gen_vid_thunks.cc  gen_vid_thunks25.cc
src/execution/: reductor.cc
src/frontend/: Makefile.am  gg-force.cc
src/net/: Makefile.am  crail.cc  crail.hh  memcached.cc  memcached.hh
src/remote/: create-function.py
src/storage/: Makefile.am  backend.cc  backend.hh  backend_crail.cc  backend_crail.hh  backend_memcached.cc  backend_memcached.hh
src/util/: Makefile.am  log.cc  log.hh
